--- a/style.css
+++ b/style.css
@@ -2,11 +2,12 @@ body{
   background-color: rgb(50, 97, 205);
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
   height: 100vh;
   margin: 0;
   cursor: pointer;
+  overflow: hidden;
 }
 
 .leftgrid,
